# broken-help-center-quest

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  tasks.py
.claude/: settings.json
.claude/commands/: status.md
.codex/commands/: quest-status.md
app/: __init__.py  chatbot.py  retrieval.py
buildguild/: __init__.py  __main__.py  achievements.py  banner.py  cli.py  onboarding.py  settings.py  start.py  state.py  status.py
buildguild/skills/: __init__.py  maya_tests_outputs.py  product_onboarding.py  test_baseline_rag.py
data/onboarding/: articles.csv  support_questions.csv
data/sample/: documents.jsonl  eval_questions.jsonl
evals/: __init__.py
notes/: quest_01_data_tour.md
quests/: quest_01.md
requirements/: quest_01_product_requirements.md
scripts/: download_dataset.py  prepare_dataset.py  restart_quest.py
skills/: ari-data-guide.md  baseline-before-optimization.md  maya-product-lead.md  maya-tests-outputs.md  mike-data-onboarding.md  product-onboarding.md  project-setup.md  quest-status.md  restart-game.md  test-baseline-rag.md  write-technical-spec.md
tests/: test_achievements.py  test_ari_data_guide.py  test_banner.py  test_cli.py  test_data_pipeline.py  test_data_tour.py  test_maya_tests_outputs.py  test_mike_data_onboarding_skill.py  test_onboarding.py  test_product_onboarding.py  test_project_setup_skill.py  test_quest_status_skill.py  test_quest_statusline.py  test_restart_quest.py  test_retrieval.py  test_start.py  test_state.py  test_status.py
tools/: data_tour.py  quest_statusline.py
